<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/badgesFragment"
        android:icon="@drawable/ic_badge"
        android:title="@string/nav_badges" />

    <item
        android:id="@+id/bookmarksFragment"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/nav_bookmarks" />

    <item
        android:id="@+id/statuefinderFragment"
        android:icon="@drawable/ic_location"
        android:title="@string/nav_statues" />

</menu>
